# waze-home-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.cast  esp32_plan.md  install.bat  install.sh  pyproject.toml  requirements.txt  screen.cast  setup.py
tests/: test_config.py
waze_home/: __init__.py  __main__.py  cli.py  config.py  waze_api.py
